# RememberYou

./: CMakeLists  CMakeLists.txt  ComputeDistance.cpp  ComputeDistance.h  ExtractFeature.cpp  ExtractFeature.h  ExtractFeatureMain.cpp  ExtractFeature_.cpp  ExtractFeature_.h  FaceDetect.cpp  FaceDetect.h  FaceProcessing.cpp  FaceProcessing.h  FaceRotate.h  README.md  Recognition.cpp  Recognition.h  Register.cpp  Register.h  RegisterMain.cpp  RememberConfig.h.in  RememberYouConfig.h  SaveVector.cpp  SaveVector.h  SingleFace.h  Utils.h  YotoFace.cpp  YotoFace.h  caffe_net_memorylayer.h
FaceDetect/: .CMakeLists.txt.swp
FaceDetect/src/test/: .facedetection_test.cpp.swo
test/: ComputeDistance.cpp  ExtractFeatureMain.cpp  ExtractFeature_.cpp  ExtractFeature_.h  FaceDetect.h  Recognition.h  RegisterMain.cpp  SaveVector.h  YotoMain.h
vgg_face_caffe/: vgg_extract_feature_memorydata.prototxt
